Fix: Background color on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 
-  background-color: rgb(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: multiply;
 
   font-family: 'Merriweather', serif;
